# src/main/java/com/grace/elior/controller/ReportController.java
@@ -1,0 +1,42 @@
+package com.grace.elior.controller;
+
+import com.grace.api.handler.ReportResourceApi;
+import com.grace.api.model.AccountingDto;
+import com.grace.elior.service.ReportService;
+import jakarta.validation.Valid;
+import java.time.LocalDate;
+import java.time.ZoneId;
+import java.util.Date;
+import java.util.List;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.core.io.ByteArrayResource;
+import org.springframework.core.io.Resource;
+import org.springframework.http.ContentDisposition;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequiredArgsConstructor
+@Slf4j
+public class ReportController implements ReportResourceApi {
+
+    private final ReportService reportService;
+
+    @Override
+    public ResponseEntity<Resource> accountingReportWithRange(Date startDate, Date endDate) {
+        LocalDate startLocalDate = startDate.toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
+        LocalDate endLocalDate = endDate.toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
+        ByteArrayResource resource = reportService.generateAccountingReportWithRange(startLocalDate, endLocalDate);
+        String filename = "Compte_du_" + startLocalDate.toString() + "_au_" + endLocalDate.toString() + ".xlsx";
+        return ResponseEntity.ok()
+                .contentType(MediaType.APPLICATION_OCTET_STREAM)
+                .contentLength(resource.contentLength())
+                .header(
+                        HttpHeaders.CONTENT_DISPOSITION,
+                        ContentDisposition.attachment().filename(filename).build().toString())
+                .body(resource);
+    }
+}
